--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
   },
   "homepage": "https://github.com/AnutkaGn/Site_WEB_2023#readme",
   "devDependencies": {
+    "mongoose": "^7.1.1",
     "nodemon": "^2.0.22"
   },
   "dependencies": {
     "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "mongoose": "^7.1.1"
+    "express": "^4.18.2"
   }
 }
